tests/ui/parser/issues/issue-72373.stderr
error: expected one of `,`, `@`, `]`, `if`, or `|`, found `..`
  --> $DIR/issue-72373.rs:5:19
   |
LL |         [h, ref ts..] => foo(c, n - h) + foo(ts, n),
   |                   ^^ expected one of `,`, `@`, `]`, `if`, or `|`
   |
help: if you meant to bind the contents of the rest of the array pattern into `ts`, use `@`
   |
LL |         [h, ref ts @ ..] => foo(c, n - h) + foo(ts, n),
   |                    +

error: aborting due to 1 previous error

